# PoorNull

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
indicators/: __init__.py  macd.py
poornull/: __init__.py  watchlists.py
poornull/data/: __init__.py  constants.py  download.py  models.py
poornull/indicators/: __init__.py  example_indicator.py  ma_ema.py  macd.py  tomdemark_sequential.py  weekly_ma_crossovers.py
poornull/rules/: __init__.py  daily_ma250_no_action_rule.py  ma_trend_alignment_rule.py
poornull/visualize/: README.md  __init__.py  base.py  candlestick.py  chart.py  ma.py  tomdemark.py  trendline.py
scripts/: README.md  compute_ma_ema.py  fetch_stock_categories.py
tests/: README.md  __init__.py  conftest.py
tests/data/: test_constants.py  test_download.py  test_models.py
tests/indicators/: __init__.py  test_macd.py  test_price_history_api.py  test_tomdemark_sequential.py
tests/rules/: __init__.py  test_daily_ma250_no_action_rule.py  test_ma_trend_alignment_rule.py
